@@ -1,7 +1,7 @@
 
-                            Less, version 408
+                            Less, version 409
 
-    This is the distribution of less, version 408, released 01 Oct 2007.
+    This is the distribution of less, version 409, released 12 Oct 2007.
     This program is part of the GNU project (http://www.gnu.org).
 
     This program is free software.  You may redistribute it and/or
