@@ -1,4 +1,4 @@
-.TH LESSECHO 1 "Version 408: 01 Oct 2007"
+.TH LESSECHO 1 "Version 409: 12 Oct 2007"
 .SH NAME
 lessecho \- expand metacharacters
 .SH SYNOPSIS
